--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website-in-typescript-main",
+  "name": "portfolio-api-main",
   "version": "1.0.0",
   "description": "",
   "homepage": "index.html",
