--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "index.html",
   "scripts": {
     "start": "vite preview",                                 
-    "dev": "PORT=5900 concurrently \"npm run start-backend\"",
+    "dev": "concurrently \"npm run start-backend\"",
     "build": "vite build",                                  
-    "start-backend": "PORT=5700 node backend/backend_code_api.js"
+    "start-backend": "node backend/backend_code_api.js"
   },
   "engines": {
     "node": ">=18 <21"
